<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_svg"
        android:title="@string/new_file"
        app:showAsAction="never"
        android:icon="@drawable/custom_save_svg"
        android:visible="true">
    </item>
    <item
        android:id="@+id/open_svg"
        android:title="@string/open_file"
        app:showAsAction="never"
        android:icon="@drawable/custom_folder_icon"
        android:visible="true">
    </item>
    <item
        android:id="@+id/save_svg"
        android:title="@string/save_file"
        app:showAsAction="never"
        android:icon="@drawable/custom_save_icon"
        android:visible="true">
    </item>
    <item
        android:id="@+id/open_bt_settings"
        android:title="@string/bluetooth"
        app:showAsAction="never"
        android:icon="@drawable/custom_bluetooth"
        android:visible="true">
    </item>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit_black_24dp"
        android:visible="true">
    </item>
</menu>