<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="majapp.bluetoothpaint.BTSettingsActivity"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Switch
            android:id="@+id/btSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth" />
        <LinearLayout
            android:id="@+id/modesLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:background="@color/colorSidePanel"
            android:visibility="visible">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="right"
                android:inputType="text"
                android:orientation="vertical" >
                <RadioButton
                    android:id="@+id/drawOptionRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_wannaDraw"
                    android:checked="true"
                    android:padding="10dp"/>
                <RadioButton
                    android:id="@+id/stareOptionRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_wannaStare"
                    android:padding="10dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/listViewsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/pairedDevicesTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_pairedDevices" />
            <ListView
                android:id="@+id/pairedDevicesListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/newDevicesTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_newDevices"/>
            <ListView
                android:id="@+id/newDevicesListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/scanButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_scan"
        android:enabled="false"
        android:onClick="scanButton_Click"/>
</RelativeLayout>
